# indices-data

./: LICENSE  README.md  active_stocks.py  fetch_index_constituents.py  pyproject.toml  telegram.py  trend.py
.github/workflows/: active_stocks.yml  fetch_data.yml  main.yml  trend.yml
data/: active_stocks_with_reasons.csv  index_constituents.csv
