[project]
name = "indices-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "scikit-learn>=1.7.1",
    "ta>=0.11.0",
    "yfinance>=0.2.65",
]
